tests/fixtures/semgrep/bad/packet_envelope_bad.py
from legacy.transport import PacketEnvelope


def build(payload):
    return PacketEnvelope(payload=payload)
